cluster/kube-system/dex/vs-dex.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: 10.45.10.20
spec:
  hosts:
    - 'dex.holthome.net'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 5556
            host: dex.kube-system.svc.cluster.local
